Anleitung zum Erstellen einer JavaFx Klasse.